--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "vanilla-app-template",
+  "name": "trening-repository-js",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/vanilla-app-template/",
+    "build": "vite build --base=/trening-repository-js/",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "glob": "^11.0.0",
-    "postcss": "^8.4.41",
+    "postcss": "^8.4.49",
     "postcss-sort-media-queries": "^5.2.0",
     "vite": "^5.4.6"
   },
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Oleh Dmytriiev <dmitriev.olegg@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "vite-plugin-full-reload": "^1.2.0",
